<?xml version="1.0"?>
<package format="3">
  <name>swerve_steering_controller</name>
  <version>0.1.0</version>
  <description>Controller for a swerve steering mobile base.</description>
  <maintainer email="marknaeem@yahoo.com">Mark Naeem</maintainer>
  <maintainer email="m.migliavacca@novalabs.io">Martino Migliavacca</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>

  <build_depend>pluginlib</build_depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
